One minor bug left when text is too large

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
   "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
   sans-serif;
+
+
 }
 
 .container{
@@ -11,6 +13,13 @@ body {
   max-width: 1000px;
   z-index:0;
   /* text-align: center; */
+  /* align-content: center; */
+
+  /* background: linear-gradient(180deg, #0093c4, #06070a);
+  background-size: 400% 400%;
+   */
+
+  
 }
 
 .home-container{
@@ -18,6 +27,12 @@ body {
   max-width: 600px;
   position: absolute;
   text-align: center;
+  
+
+/* 
+  background: linear-gradient(180deg, #0093c4, #06070a);
+  background-size: 400% 400%;
+   */
 
 }
 .navbar-container{
@@ -39,43 +54,9 @@ a{
 }
 p{
   z-index: 1;
+  /* width: 100%; */
 }
 
-/* Loader */
-.lds-hourglass {
-  display: inline-block;
-  /* position: relative; */
-  width: 128px;
-  height: 128px;
-  padding-top: 100px;
-  text-align: center;
-  
-}
-.lds-hourglass:after {
-  content: " ";
-  display: block;
-  border-radius: 50%;
-  width: 0;
-  height: 0;
-  margin: 6px;
-  box-sizing: border-box;
-  border: 26px solid #a51111;
-  border-color: rgb(97, 28, 28) transparent #fff transparent;
-  animation: lds-hourglass 1.2s infinite;
-}
-@keyframes lds-hourglass {
-  0% {
-    transform: rotate(0);
-    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-  }
-  50% {
-    transform: rotate(900deg);
-    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-  }
-  100% {
-    transform: rotate(1800deg);
-  }
-}
 
 .particles {
   position: fixed;
@@ -83,5 +64,96 @@ p{
   right: 0;
   left: 0;
   bottom: 0;
-  z-index: -1;
+  z-index: 0;
+
+  
+}
+
+
+.lds-roller {
+  display: inline-block;
+  position: relative;
+  width: 64px;
+  height: 64px;
+
+  margin-top: 250px;
+  margin-left: 46%;
+}
+.lds-roller div {
+  animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  transform-origin: 32px 32px;
+}
+.lds-roller div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #fff;
+  margin: -3px 0 0 -3px;
+}
+.lds-roller div:nth-child(1) {
+  animation-delay: -0.036s;
+}
+.lds-roller div:nth-child(1):after {
+  top: 50px;
+  left: 50px;
+}
+.lds-roller div:nth-child(2) {
+  animation-delay: -0.072s;
+}
+.lds-roller div:nth-child(2):after {
+  top: 54px;
+  left: 45px;
+}
+.lds-roller div:nth-child(3) {
+  animation-delay: -0.108s;
+}
+.lds-roller div:nth-child(3):after {
+  top: 57px;
+  left: 39px;
+}
+.lds-roller div:nth-child(4) {
+  animation-delay: -0.144s;
+}
+.lds-roller div:nth-child(4):after {
+  top: 58px;
+  left: 32px;
+}
+.lds-roller div:nth-child(5) {
+  animation-delay: -0.18s;
+}
+.lds-roller div:nth-child(5):after {
+  top: 57px;
+  left: 25px;
+}
+.lds-roller div:nth-child(6) {
+  animation-delay: -0.216s;
+}
+.lds-roller div:nth-child(6):after {
+  top: 54px;
+  left: 19px;
+}
+.lds-roller div:nth-child(7) {
+  animation-delay: -0.252s;
+}
+.lds-roller div:nth-child(7):after {
+  top: 50px;
+  left: 14px;
+}
+.lds-roller div:nth-child(8) {
+  animation-delay: -0.288s;
+}
+.lds-roller div:nth-child(8):after {
+  top: 45px;
+  left: 10px;
+}
+@keyframes lds-roller {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
